chore: major project cleanup and organization
- Remove git submodules and clean up references
- Archive outdated documentation and old files
- Remove redundant dotfiles (.act.env, .actrc, .prettierignore)
- Reorganize frontend E2E tests and components
- Add new deployment guides and system documentation
- Clean up Docker configurations and test files
- Update frontend dependencies and configurations

This cleanup consolidates the project into a single repository
and removes legacy infrastructure that's no longer needed.