@@ -3,75 +3,76 @@ package com.focushive.buddy.config;
 import org.springframework.boot.test.context.TestConfiguration;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Primary;
-import org.springframework.security.authentication.TestingAuthenticationToken;
+import org.springframework.context.annotation.Configuration;
+import org.springframework.core.annotation.Order;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
-import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
-import org.springframework.security.core.context.SecurityContext;
-import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 
+import java.util.Collections;
 import java.util.List;
 
 /**
- * Test-specific security configuration that disables authentication
- * for integration tests and provides JWT mocking capabilities.
+ * Test Security Configuration
+ * Disables security for E2E tests to focus on API functionality
  */
 @TestConfiguration
 @EnableWebSecurity
 public class TestSecurityConfig {
 
+    /**
+     * Security filter chain that permits all requests for testing
+     */
     @Bean
     @Primary
-    public SecurityFilterChain testFilterChain(HttpSecurity http) throws Exception {
+    @Order(1)
+    public SecurityFilterChain testSecurityFilterChain(HttpSecurity http) throws Exception {
         http
-            .csrf(AbstractHttpConfigurer::disable)
-            .cors(cors -> cors.disable())
+            .csrf(csrf -> csrf.disable())
             .authorizeHttpRequests(authz -> authz
-                .requestMatchers("/actuator/health", "/actuator/info").permitAll()
                 .anyRequest().permitAll()
             )
-            .oauth2ResourceServer(oauth2 -> oauth2.disable());
+            .headers(headers -> headers
+                .frameOptions(frame -> frame.disable())
+            );
 
         return http.build();
     }
 
     /**
-     * Helper method to mock authentication for test methods
+     * Mock authentication for testing
      */
     public static void mockAuthentication(String userId) {
-        mockAuthentication(userId, List.of("ROLE_USER"));
+        UsernamePasswordAuthenticationToken auth = new UsernamePasswordAuthenticationToken(
+            userId,
+            null,
+            Collections.singletonList(new SimpleGrantedAuthority("ROLE_USER"))
+        );
+        SecurityContextHolder.getContext().setAuthentication(auth);
     }
 
     /**
-     * Helper method to mock authentication with specific roles
+     * Mock admin authentication for testing
      */
-    public static void mockAuthentication(String userId, List<String> roles) {
-        List<SimpleGrantedAuthority> authorities = roles.stream()
-                .map(SimpleGrantedAuthority::new)
-                .toList();
-
-        TestingAuthenticationToken authentication = new TestingAuthenticationToken(
-                userId, null, authorities);
-        authentication.setAuthenticated(true);
-
-        SecurityContext securityContext = SecurityContextHolder.createEmptyContext();
-        securityContext.setAuthentication(authentication);
-        SecurityContextHolder.setContext(securityContext);
+    public static void mockAdminAuthentication(String userId) {
+        UsernamePasswordAuthenticationToken auth = new UsernamePasswordAuthenticationToken(
+            userId,
+            null,
+            List.of(
+                new SimpleGrantedAuthority("ROLE_USER"),
+                new SimpleGrantedAuthority("ROLE_ADMIN")
+            )
+        );
+        SecurityContextHolder.getContext().setAuthentication(auth);
     }
 
     /**
-     * Helper method to clear authentication context
+     * Clear authentication context
      */
     public static void clearAuthentication() {
         SecurityContextHolder.clearContext();
-    }
-
-    /**
-     * Helper method to mock admin authentication
-     */
-    public static void mockAdminAuthentication(String userId) {
-        mockAuthentication(userId, List.of("ROLE_USER", "ROLE_ADMIN"));
     }
 }
